# pipe_watcher

./: Cargo.toml  README.md  build
src/: listener.rs  main.rs  shared.rs  writer.rs
