[package]
name = "pipe_watcher"
version = "2.1.1"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
edition = "2018"
description = """
A pipe reader and writer for the terminal. Made for use with the ipipe Rust library.
"""
keywords = ["pipe", "ipc", "fifo", "cli", "terminal"]
homepage = "https://github.com/Eolu/pipe_watcher"
repository = "https://github.com/Eolu/pipe_watcher"
categories = ["filesystem", "os::unix-apis", "os::windows-apis", "api-bindings"]
documentation = "https://docs.rs/pipe_watcher"

[[bin]]
name = "pipe_listener"
path = "src/listener.rs"
required-features = []

[[bin]]
name = "pipe_writer"
path = "src/writer.rs"
required-features = ["getch"]

[features]
default = ["getch"]

[dependencies]
ipipe = { version = "*", default-features = false }
getch = { version = "0.2.1", optional = true }